[gd_scene load_steps=24 format=3 uid="uid://djimjjn2shmka"]

[ext_resource type="Script" path="res://test_stage_pemdas.gd" id="1_ue84q"]
[ext_resource type="Texture2D" uid="uid://bf53xdywvisuo" path="res://asset/UI/Summer2.png" id="2_2wlat"]
[ext_resource type="Texture2D" uid="uid://dwldsahsmum7d" path="res://asset/UI/1.png" id="3_ju0fj"]
[ext_resource type="Texture2D" uid="uid://byifsb6867sav" path="res://asset/UI/2.png" id="4_p6emn"]
[ext_resource type="Texture2D" uid="uid://c8rseeirdyqfk" path="res://asset/UI/3.png" id="5_op4qp"]
[ext_resource type="Texture2D" uid="uid://cu3m3ho7b3kno" path="res://asset/UI/4.png" id="6_geo23"]
[ext_resource type="Texture2D" uid="uid://mxvx0bwdcd3w" path="res://asset/UI/5.png" id="7_gprab"]
[ext_resource type="Texture2D" uid="uid://c5dw3ydc1s4yr" path="res://asset/UI/6.png" id="8_sukg6"]
[ext_resource type="Texture2D" uid="uid://bffoin8e0nw4" path="res://asset/UI/7.png" id="9_efgxq"]
[ext_resource type="Texture2D" uid="uid://b3hia88v6t47b" path="res://asset/UI/8.png" id="10_khjp8"]
[ext_resource type="Texture2D" uid="uid://d18k506xrmby4" path="res://asset/UI/9.png" id="11_8hsmi"]
[ext_resource type="Texture2D" uid="uid://d1m1q7ev7ot2i" path="res://asset/UI/Clear.png" id="12_qif5f"]
[ext_resource type="Texture2D" uid="uid://dxetc5bv3s2kd" path="res://asset/UI/0.png" id="13_mys8m"]
[ext_resource type="Texture2D" uid="uid://k0bwslbq0k4d" path="res://asset/UI/backspace.png" id="14_4k1x1"]
[ext_resource type="Texture2D" uid="uid://b5c62fsc3wbw4" path="res://asset/UI/Back.png" id="15_xymbh"]
[ext_resource type="Texture2D" uid="uid://d0uuvgaahkeyb" path="res://asset/art/Idle(1).png" id="16_lkbah"]
[ext_resource type="Texture2D" uid="uid://dawnge3ejgh62" path="res://asset/UI/pass.png" id="17_2vkvq"]
[ext_resource type="Texture2D" uid="uid://b2capxdpvd4vu" path="res://asset/UI/Transparent.png" id="18_d0315"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ix5rx"]
atlas = ExtResource("16_lkbah")
region = Rect2(9, 8, 67, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_quq4l"]
atlas = ExtResource("16_lkbah")
region = Rect2(76, 8, 67, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyu3c"]
atlas = ExtResource("16_lkbah")
region = Rect2(143, 8, 67, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_q01dx"]
atlas = ExtResource("16_lkbah")
region = Rect2(210, 8, 67, 78)

[sub_resource type="SpriteFrames" id="SpriteFrames_a242u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix5rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quq4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyu3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q01dx")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Test_Stage_PEMDAS" type="Node2D"]
script = ExtResource("1_ue84q")

[node name="Stage_BG" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -12.975
anchor_top = -23.375
anchor_right = -12.975
anchor_bottom = -23.375
offset_right = 1080.0
offset_bottom = 1912.0
texture = ExtResource("2_2wlat")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="ProblemLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = 300.0
offset_right = 954.0
offset_bottom = 454.0
theme_override_font_sizes/font_size = 100

[node name="Label" type="Label" parent="."]
offset_left = 360.0
offset_top = 696.0
offset_right = 740.0
offset_bottom = 833.0
theme_override_font_sizes/font_size = 100

[node name="Number_Button" type="VBoxContainer" parent="."]
offset_left = 221.58
offset_top = 932.78
offset_right = 853.58
offset_bottom = 1774.78
scale = Vector2(0.935, 0.935)

[node name="num_row_123" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="one" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
icon = ExtResource("3_ju0fj")
flat = true
icon_alignment = 1

[node name="two" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("4_p6emn")
flat = true
icon_alignment = 1

[node name="three" type="Button" parent="Number_Button/num_row_123"]
layout_mode = 2
icon = ExtResource("5_op4qp")
flat = true
icon_alignment = 1

[node name="num_row_456" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="four" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("6_geo23")
flat = true
icon_alignment = 1

[node name="five" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("7_gprab")
flat = true
icon_alignment = 1

[node name="six" type="Button" parent="Number_Button/num_row_456"]
layout_mode = 2
icon = ExtResource("8_sukg6")
flat = true
icon_alignment = 1

[node name="num_row_789" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2

[node name="seven" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("9_efgxq")
flat = true
icon_alignment = 1

[node name="eight" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("10_khjp8")
flat = true
icon_alignment = 1

[node name="nine" type="Button" parent="Number_Button/num_row_789"]
layout_mode = 2
icon = ExtResource("11_8hsmi")
flat = true
icon_alignment = 1

[node name="num_row_0_clear_bckspace" type="HBoxContainer" parent="Number_Button"]
layout_mode = 2
size_flags_horizontal = 4

[node name="clear" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("12_qif5f")
flat = true
icon_alignment = 1

[node name="zero" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("13_mys8m")
flat = true
alignment = 0
icon_alignment = 1

[node name="back" type="Button" parent="Number_Button/num_row_0_clear_bckspace"]
layout_mode = 2
icon = ExtResource("14_4k1x1")
flat = true
icon_alignment = 1

[node name="Placeholder_BackButton" type="Button" parent="."]
offset_left = 20.895
offset_top = 1762.67
offset_right = 352.895
offset_bottom = 2093.67
scale = Vector2(0.4, 0.4)
icon = ExtResource("15_xymbh")
flat = true
icon_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(180, 718)
scale = Vector2(5.24813, 4.37821)
sprite_frames = SubResource("SpriteFrames_a242u")
frame = 2
frame_progress = 0.423047

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 513.0
offset_top = 55.0
offset_right = 646.0
offset_bottom = 167.0
theme_override_font_sizes/font_size = 50

[node name="Submit" type="Button" parent="."]
offset_left = 822.0
offset_top = 925.485
offset_right = 1047.0
offset_bottom = 1131.48
theme_override_font_sizes/font_size = 100
text = "
"
icon = ExtResource("17_2vkvq")
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 75.21
offset_top = 282.12
offset_right = 4491.21
offset_bottom = 1362.12
scale = Vector2(0.21, 0.21)
texture = ExtResource("18_d0315")

[connection signal="pressed" from="Number_Button/num_row_123/one" to="." method="_on_one_pressed"]
[connection signal="pressed" from="Number_Button/num_row_123/two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="Number_Button/num_row_123/three" to="." method="_on_three_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/four" to="." method="_on_four_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="Number_Button/num_row_456/six" to="." method="_on_six_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/seven" to="." method="_on_seven_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/eight" to="." method="_on_eight_pressed"]
[connection signal="pressed" from="Number_Button/num_row_789/nine" to="." method="_on_nine_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/zero" to="." method="_on_zero_pressed"]
[connection signal="pressed" from="Number_Button/num_row_0_clear_bckspace/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Placeholder_BackButton" to="." method="_on_placeholder_back_button_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
